[package]
name = "rune-reactor"
version = "0.1.0"
edition = "2021"
description = "Compile human-readable .rf rune policies into CLN rune restrictions"

[lib]
name = "rune_reactor"
path = "src/lib.rs"

[[bin]]
name = "rune-reactor"
path = "src/main.rs"

[dependencies]
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
